# pyanglemania

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
envs/: pyanglemania.yml
notebooks/: tutorial.ipynb
plans/: implementation_plan.md  optimization.md
src/pyanglemania/: __init__.py  _utils.py  datasets.py
src/pyanglemania/preprocessing/: __init__.py  _anglemania.py  _angles.py  _batches.py  _select.py  _stats.py
tests/: test_anglemania.py  test_angles.py  test_batches.py  test_gpu.py  test_select.py  test_stats.py
