[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "pyanglemania"
description = "GPU-accelerated, scanpy/rapids-singlecell-native port of the anglemania feature-selection algorithm for scRNA-seq dataset integration."
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
authors = [
    { name = "Aaron Kollotzek", email = "aaron.kollotzek@mdc-berlin.de" },
]
readme = "README.md"
dependencies = [
    "anndata>=0.10.0",
    "scanpy>=1.10.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas",
]
version = "0.0.1"

[project.optional-dependencies]
rapids = [ "cupy-cuda12x" ]
test = [ "pytest" ]

[tool.hatch.build.targets.wheel]
packages = [ "src/pyanglemania" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]

[tool.ruff]
src = [ "src" ]
